--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "stripe": "^8.145.0",
     "uuid": "^8.3.2",
     "webpack": "^5.35.1",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "bcrypt": "^5.0.1"
   },
   "devDependencies": {
-    "bcrypt": "^5.0.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
