--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "framer-motion": "^4.1.11",
@@ -53,8 +54,7 @@
     "stripe": "^8.145.0",
     "uuid": "^8.3.2",
     "webpack": "^5.35.1",
-    "webpack-cli": "^4.6.0",
-    "bcrypt": "^5.0.1"
+    "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
